Working version
Signed-off-by: b.perreyon <baptiste.perreyon@supergrid-institute.com>