@@ -29,6 +29,7 @@ import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.powsybl.openloadflow.util.Markers.PERFORMANCE_MARKER;
@@ -44,7 +45,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
 
     protected final int numCC;
 
-    private final int numSC;
+    private final List<LfSynchronousNetwork> synchronousNetworks;
+//    private final int numSC;
 
     protected final SlackBusSelector slackBusSelector;
 
@@ -56,13 +58,13 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
 
     private final List<LfBus> busesByIndex = new ArrayList<>();
 
-    protected LfBus referenceBus;
+//    protected LfBus referenceBus;
 
-    protected List<LfBus> slackBuses = new ArrayList<>();
+//    protected List<LfBus> slackBuses = new ArrayList<>();
 
-    private Set<LfBus> excludedSlackBuses = Collections.emptySet();
+//    private Set<LfBus> excludedSlackBuses = Collections.emptySet();
 
-    private LfGenerator referenceGenerator;
+//    private LfGenerator referenceGenerator;
 
     private final List<LfBranch> branches = new ArrayList<>();
 
@@ -167,28 +169,33 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
 
     protected final List<LfOverloadManagementSystem> overloadManagementSystems = new ArrayList<>();
 
-    public LfNetwork(int numCC, int numSC, SlackBusSelector slackBusSelector, int maxSlackBusCount,
+    public LfNetwork(int numCC, SlackBusSelector slackBusSelector, int maxSlackBusCount,
                      GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory, ReferenceBusSelector referenceBusSelector, ReportNode reportNode) {
         this.numCC = numCC;
-        this.numSC = numSC;
         this.slackBusSelector = Objects.requireNonNull(slackBusSelector);
         this.maxSlackBusCount = maxSlackBusCount;
         this.connectivityFactory = Objects.requireNonNull(connectivityFactory);
         this.referenceBusSelector = referenceBusSelector;
         this.reportNode = Objects.requireNonNull(reportNode);
+
+        this.synchronousNetworks = new ArrayList<>();
     }
 
-    public LfNetwork(int numCC, int numSC, SlackBusSelector slackBusSelector, int maxSlackBusCount,
+    public LfNetwork(int numCC, SlackBusSelector slackBusSelector, int maxSlackBusCount,
                      GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory, ReferenceBusSelector referenceBusSelector) {
-        this(numCC, numSC, slackBusSelector, maxSlackBusCount, connectivityFactory, referenceBusSelector, ReportNode.NO_OP);
+        this(numCC, slackBusSelector, maxSlackBusCount, connectivityFactory, referenceBusSelector, ReportNode.NO_OP);
     }
 
     public int getNumCC() {
         return numCC;
     }
 
-    public int getNumSC() {
-        return numSC;
+    public List<LfSynchronousNetwork> getSynchronousNetworks() {
+        return synchronousNetworks;
+    }
+
+    public LfSynchronousNetwork getSynchronousNetwork(int numSC) {
+        return synchronousNetworks.stream().filter(n -> n.getNumSC() == numSC).findFirst().orElseThrow();
     }
 
     public ReportNode getReportNode() {
@@ -213,55 +220,64 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         };
     }
 
-    protected void invalidateSlackAndReference() {
-        if (slackBuses != null) {
-            for (var slackBus : slackBuses) {
-                slackBus.setSlack(false);
-            }
-        }
-        slackBuses = null;
-        if (referenceBus != null) {
-            referenceBus.setReference(false);
-        }
-        referenceBus = null;
-        if (referenceGenerator != null) {
-            referenceGenerator.setReference(false);
-        }
-        referenceGenerator = null;
-    }
+//    protected void invalidateSlackAndReference() {
+//        if (slackBuses != null) {
+//            for (var slackBus : slackBuses) {
+//                slackBus.setSlack(false);
+//            }
+//        }
+//        slackBuses = null;
+//        if (referenceBus != null) {
+//            referenceBus.setReference(false);
+//        }
+//        referenceBus = null;
+//        if (referenceGenerator != null) {
+//            referenceGenerator.setReference(false);
+//        }
+//        referenceGenerator = null;
+//    }
 
     public void updateSlackBusesAndReferenceBus() {
-        if (slackBuses == null && referenceBus == null) {
-            List<LfBus> selectableBuses =
-                    excludedSlackBuses.isEmpty() ? busesByIndex :
-                            busesByIndex.stream().filter(bus -> !excludedSlackBuses.contains(bus)).toList();
-            SelectedSlackBus selectedSlackBus = slackBusSelector.select(selectableBuses, maxSlackBusCount);
-            slackBuses = selectedSlackBus.getBuses();
-            if (slackBuses.isEmpty()) { // ultimate fallback
-                selectedSlackBus = SLACK_BUS_SELECTOR_FALLBACK.select(selectableBuses, maxSlackBusCount);
-                if (selectedSlackBus.getBuses().isEmpty()) {
-                    throw new PowsyblException("No slack bus could be selected");
-                }
-                slackBuses = selectedSlackBus.getBuses();
-            }
-            LOGGER.info("Network {}, slack buses are {} (method='{}')", this, slackBuses, selectedSlackBus.getSelectionMethod());
-            for (var slackBus : slackBuses) {
-                slackBus.setSlack(true);
-            }
-            // reference bus must be selected after slack bus, because of ReferenceBusFirstSlackSelector implementation requiring slackBuses
-            SelectedReferenceBus selectedReferenceBus = referenceBusSelector.select(this);
-            referenceBus = selectedReferenceBus.getLfBus();
-            LOGGER.info("Network {}, reference bus is {} (method='{}')", this, referenceBus, selectedReferenceBus.getSelectionMethod());
-            referenceBus.setReference(true);
-            if (selectedReferenceBus instanceof SelectedGeneratorReferenceBus generatorReferenceBus) {
-                referenceGenerator = generatorReferenceBus.getLfGenerator();
-                LOGGER.info("Network {}, reference generator is {}", this, referenceGenerator.getId());
-                referenceGenerator.setReference(true);
-            }
-            if (connectivity != null) {
-                connectivity.setMainComponentVertex(slackBuses.get(0));
-            }
+        for (LfSynchronousNetwork lfScNetwork : synchronousNetworks) {
+            lfScNetwork.updateSlackBusesAndReferenceBus();
         }
+        // Main component vertex is only meaningful for single-SC networks (security analysis).
+        // For multi-SC (AC-DC) networks, security analysis is not yet supported; leave unset.
+//        if (connectivity != null && synchronousNetworks.size() == 1) {
+//            connectivity.setMainComponentVertex(synchronousNetworks.getFirst().getSlackBuses().getFirst());
+//        }
+
+//        if (slackBuses == null && referenceBus == null) {
+//            List<LfBus> selectableBuses =
+//                    excludedSlackBuses.isEmpty() ? busesByIndex :
+//                            busesByIndex.stream().filter(bus -> !excludedSlackBuses.contains(bus)).toList();
+//            SelectedSlackBus selectedSlackBus = slackBusSelector.select(selectableBuses, maxSlackBusCount);
+//            slackBuses = selectedSlackBus.getBuses();
+//            if (slackBuses.isEmpty()) { // ultimate fallback
+//                selectedSlackBus = SLACK_BUS_SELECTOR_FALLBACK.select(selectableBuses, maxSlackBusCount);
+//                if (selectedSlackBus.getBuses().isEmpty()) {
+//                    throw new PowsyblException("No slack bus could be selected");
+//                }
+//                slackBuses = selectedSlackBus.getBuses();
+//            }
+//            LOGGER.info("Network {}, slack buses are {} (method='{}')", this, slackBuses, selectedSlackBus.getSelectionMethod());
+//            for (var slackBus : slackBuses) {
+//                slackBus.setSlack(true);
+//            }
+//            // reference bus must be selected after slack bus, because of ReferenceBusFirstSlackSelector implementation requiring slackBuses
+//            SelectedReferenceBus selectedReferenceBus = referenceBusSelector.select(this);
+//            referenceBus = selectedReferenceBus.getLfBus();
+//            LOGGER.info("Network {}, reference bus is {} (method='{}')", this, referenceBus, selectedReferenceBus.getSelectionMethod());
+//            referenceBus.setReference(true);
+//            if (selectedReferenceBus instanceof SelectedGeneratorReferenceBus generatorReferenceBus) {
+//                referenceGenerator = generatorReferenceBus.getLfGenerator();
+//                LOGGER.info("Network {}, reference generator is {}", this, referenceGenerator.getId());
+//                referenceGenerator.setReference(true);
+//            }
+//            if (connectivity != null) {
+//                connectivity.setMainComponentVertex(slackBuses.get(0));
+//            }
+
     }
 
     private void invalidateZeroImpedanceNetworks() {
@@ -275,7 +291,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         branchesById.put(branch.getId(), branch);
         branch.getOriginalIds().forEach(originalId ->
             branchesByOriginalId.computeIfAbsent(originalId, k -> new ArrayList<>()).add(branch));
-        invalidateSlackAndReference();
+        synchronousNetworks.forEach(LfSynchronousNetwork::invalidateSlackAndReference);
+
         connectivity = null;
         invalidateZeroImpedanceNetworks();
 
@@ -314,7 +331,14 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         }
         branches.remove(branch);
         branch.getOriginalIds().forEach(branchesByOriginalId::remove);
-        invalidateSlackAndReference();
+        LfBus bus = branch.getBus1() != null ? branch.getBus1() : branch.getBus2();
+        if (bus != null) {
+            getSynchronousNetwork(bus.getNumSC()).invalidateSlackAndReference();
+        } else {
+            // security fallback
+            synchronousNetworks.forEach(LfSynchronousNetwork::invalidateSlackAndReference);
+        }
+
         if (connectivity != null) {
             connectivity.removeEdge(branch);
         }
@@ -343,7 +367,18 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         bus.setNum(busesByIndex.size());
         busesByIndex.add(bus);
         busesById.put(bus.getId(), bus);
-        invalidateSlackAndReference();
+        // Create a new LfSynchronousNetwork if this bus belongs to a synchronous component not stored yet
+        if (!synchronousNetworks.stream().map(LfSynchronousNetwork::getNumSC).toList().contains(bus.getNumSC())) {
+            synchronousNetworks.add(new LfSynchronousNetworkImpl(
+                this,
+                bus.getNumSC(),
+                slackBusSelector,
+                referenceBusSelector,
+                maxSlackBusCount
+            ));
+        }
+
+        synchronousNetworks.forEach(LfSynchronousNetwork::invalidateSlackAndReference);
         connectivity = null;
 
         bus.getShunt().ifPresent(this::addShunt);
@@ -373,36 +408,33 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         return busesByIndex.get(num);
     }
 
-    public LfBus getReferenceBus() {
-        updateSlackBusesAndReferenceBus();
-        return referenceBus;
-    }
+//    public LfBus getReferenceBus() {
+//        updateSlackBusesAndReferenceBus();
+//        return referenceBus;
+//    }
 
-    public LfBus getSlackBus() {
-        return getSlackBuses().get(0);
-    }
 
-    public List<LfBus> getSlackBuses() {
-        updateSlackBusesAndReferenceBus();
-        return slackBuses;
-    }
+//    public List<LfBus> getSlackBuses() {
+//        updateSlackBusesAndReferenceBus();
+//        return slackBuses;
+//    }
 
-    public Set<LfBus> getExcludedSlackBuses() {
-        return excludedSlackBuses;
-    }
+//    public Set<LfBus> getExcludedSlackBuses() {
+//        return excludedSlackBuses;
+//    }
 
-    public void setExcludedSlackBuses(Set<LfBus> excludedSlackBuses) {
-        Objects.requireNonNull(excludedSlackBuses);
-        if (!excludedSlackBuses.equals(this.excludedSlackBuses)) {
-            this.excludedSlackBuses = excludedSlackBuses;
-            invalidateSlackAndReference();
-        }
-    }
+//    public void setExcludedSlackBuses(Set<LfBus> excludedSlackBuses) {
+//        Objects.requireNonNull(excludedSlackBuses);
+//        if (!excludedSlackBuses.equals(this.excludedSlackBuses)) {
+//            this.excludedSlackBuses = excludedSlackBuses;
+//            invalidateSlackAndReference();
+//        }
+//    }
 
-    public LfGenerator getReferenceGenerator() {
-        updateSlackBusesAndReferenceBus();
-        return referenceGenerator;
-    }
+//    public LfGenerator getReferenceGenerator() {
+//        updateSlackBusesAndReferenceBus();
+//        return referenceGenerator;
+//    }
 
     public List<LfShunt> getShunts() {
         return shuntsByIndex;
@@ -507,9 +539,9 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
             LOGGER.debug("Switches status update: {} closed and {} opened", updateReport.closedSwitchCount, updateReport.openedSwitchCount);
         }
         if (updateReport.connectedBranchSide1Count + updateReport.disconnectedBranchSide1Count
-                + updateReport.connectedBranchSide2Count + updateReport.disconnectedBranchSide2Count > 0) {
+            + updateReport.connectedBranchSide2Count + updateReport.disconnectedBranchSide2Count > 0) {
             LOGGER.debug("Branches connection status update: {} connected side 1, {} disconnected side1, {} connected side 2, {} disconnected side 2",
-                    updateReport.connectedBranchSide1Count, updateReport.disconnectedBranchSide1Count, updateReport.connectedBranchSide2Count, updateReport.disconnectedBranchSide2Count);
+                updateReport.connectedBranchSide1Count, updateReport.disconnectedBranchSide1Count, updateReport.connectedBranchSide2Count, updateReport.disconnectedBranchSide2Count);
         }
 
         stopwatch.stop();
@@ -628,8 +660,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         Objects.requireNonNull(writer);
         updateSlackBusesAndReferenceBus();
         try (JsonGenerator jsonGenerator = new JsonFactory()
-                .createGenerator(writer)
-                .useDefaultPrettyPrinter()) {
+            .createGenerator(writer)
+            .useDefaultPrettyPrinter()) {
             jsonGenerator.writeStartObject();
 
             jsonGenerator.writeFieldName("buses");
@@ -692,7 +724,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
     private void reportSize(ReportNode reportNode) {
         Reports.reportNetworkSize(reportNode, busesById.values().size(), branches.size());
         LOGGER.info("Network {} has {} buses and {} branches",
-                this, busesById.values().size(), branches.size());
+            this, busesById.values().size(), branches.size());
     }
 
     /**
@@ -711,10 +743,10 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         }
         if (fictitiousTargetPNormInf + fictitiousTargetQNormInf > 0) {
             Reports.reportFictitiousInjectionTotal(reportNode,
-                    fictitiousTargetPNormInf * PerUnit.SB,
-                    fictitiousTargetQNormInf * PerUnit.SB,
-                    busCount,
-                    LOGGER);
+                fictitiousTargetPNormInf * PerUnit.SB,
+                fictitiousTargetQNormInf * PerUnit.SB,
+                busCount,
+                LOGGER);
         }
     }
 
@@ -732,7 +764,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
 
         Reports.reportNetworkBalance(reportNode, activeGeneration, activeLoad, reactiveGeneration, reactiveLoad);
         LOGGER.info("Network {} balance: active generation={} MW, active load={} MW, reactive generation={} MVar, reactive load={} MVar",
-                this, activeGeneration, activeLoad, reactiveGeneration, reactiveLoad);
+            this, activeGeneration, activeLoad, reactiveGeneration, reactiveLoad);
     }
 
     public void fix(boolean minImpedance, double lowImpedanceThreshold) {
@@ -743,56 +775,63 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         } else {
             // zero impedance controlling or controlled branch is not supported
             branches.stream()
-                    .filter(b -> b.isPhaseController() || b.isPhaseControlled()
-                            || b.isVoltageController()
-                            || b.isTransformerReactivePowerController() || b.isTransformerReactivePowerControlled()
-                            || b.getGeneratorReactivePowerControl().isPresent())
-                    .forEach(branch -> branch.setMinZ(lowImpedanceThreshold));
+                .filter(b -> b.isPhaseController() || b.isPhaseControlled()
+                    || b.isVoltageController()
+                    || b.isTransformerReactivePowerController() || b.isTransformerReactivePowerControlled()
+                    || b.getGeneratorReactivePowerControl().isPresent())
+                .forEach(branch -> branch.setMinZ(lowImpedanceThreshold));
             // zero impedance boundary branch is not supported
             areas.stream()
-                    .flatMap(a -> a.getBoundaries().stream())
-                    .map(LfArea.Boundary::getBranch)
-                    .forEach(branch -> branch.setMinZ(lowImpedanceThreshold));
+                .flatMap(a -> a.getBoundaries().stream())
+                .map(LfArea.Boundary::getBranch)
+                .forEach(branch -> branch.setMinZ(lowImpedanceThreshold));
         }
     }
 
-    private void validateBuses(LoadFlowModel loadFlowModel, ReportNode reportNode) {
-        // DC or AC, if no generator, network is dead
-        boolean hasAtLeastOneBusGenerator = false;
-        for (LfBus bus : busesByIndex) {
-            if (!bus.getGenerators().isEmpty() || !bus.getConverters().isEmpty()) {
-                hasAtLeastOneBusGenerator = true;
-                break;
-            }
-        }
-        if (!hasAtLeastOneBusGenerator) {
-            // we don't report because this is too much on real networks
-            LOGGER.debug("Network {} has no generator and will be considered dead", this);
-            validity = Validity.INVALID_NO_GENERATOR;
-            return;
-        }
-        // AC requires at least one bus under voltage control
-        if (loadFlowModel == LoadFlowModel.AC) {
-            boolean hasAtLeastOneBusGeneratorVoltageControlEnabled = false;
-            for (LfBus bus : busesByIndex) {
-                if (bus.isGeneratorVoltageControlEnabled() || bus.isVoltageSourceConverterVoltageControlled()) {
-                    hasAtLeastOneBusGeneratorVoltageControlEnabled = true;
-                    break;
-                }
-            }
-            if (!hasAtLeastOneBusGeneratorVoltageControlEnabled) {
-                LOGGER.warn("Network {} must have at least one bus with generator voltage control enabled", this);
-                if (reportNode != null) {
-                    Reports.reportNetworkMustHaveAtLeastOneBusGeneratorVoltageControlEnabled(reportNode);
-                }
-                validity = Validity.INVALID_NO_GENERATOR_VOLTAGE_CONTROL;
-            }
-        }
-    }
+//    private void validateBuses(LoadFlowModel loadFlowModel, ReportNode reportNode) {
+//        // DC or AC, if no generator, network is dead
+//        boolean hasAtLeastOneBusGenerator = false;
+//        for (LfBus bus : busesByIndex) {
+//            if (!bus.getGenerators().isEmpty() || !bus.getConverters().isEmpty()) {
+//                hasAtLeastOneBusGenerator = true;
+//                break;
+//            }
+//        }
+//        if (!hasAtLeastOneBusGenerator) {
+//            // we don't report because this is too much on real networks
+//            LOGGER.debug("Network {} has no generator and will be considered dead", this);
+//            validity = Validity.INVALID_NO_GENERATOR;
+//            return;
+//        }
+//        // AC requires at least one bus under voltage control
+//        if (loadFlowModel == LoadFlowModel.AC) {
+//            boolean hasAtLeastOneBusGeneratorVoltageControlEnabled = false;
+//            for (LfBus bus : busesByIndex) {
+//                if (bus.isGeneratorVoltageControlEnabled() || bus.isVoltageSourceConverterVoltageControlled()) {
+//                    hasAtLeastOneBusGeneratorVoltageControlEnabled = true;
+//                    break;
+//                }
+//            }
+//            if (!hasAtLeastOneBusGeneratorVoltageControlEnabled) {
+//                LOGGER.warn("Network {} must have at least one bus with generator voltage control enabled", this);
+//                if (reportNode != null) {
+//                    Reports.reportNetworkMustHaveAtLeastOneBusGeneratorVoltageControlEnabled(reportNode);
+//                }
+//                validity = Validity.INVALID_NO_GENERATOR_VOLTAGE_CONTROL;
+//            }
+//        }
+//    }
 
     public void validate(LoadFlowModel loadFlowModel, ReportNode reportNode) {
         validity = Validity.VALID;
-        validateBuses(loadFlowModel, reportNode);
+        // The network is valid if each synchronous network is valid
+        for (LfSynchronousNetwork lfScNetwork : synchronousNetworks) {
+            Validity scNetworkValidity = lfScNetwork.validateBuses(loadFlowModel, reportNode);
+            if (scNetworkValidity != Validity.VALID) {
+                validity = scNetworkValidity;
+                break;
+            }
+        }
     }
 
     public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, SlackBusSelector slackBusSelector) {
@@ -822,7 +861,10 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
                     lfNetwork.reportSize(networkReport);
                     lfNetwork.reportBalance(networkReport);
                     lfNetwork.reportFictitiousInjectionTotal(networkReport);
-                    Reports.reportAngleReferenceBusAndSlackBuses(networkReport, lfNetwork.getReferenceBus().getId(), lfNetwork.getSlackBuses().stream().map(LfBus::getId).toList());
+                    for (LfSynchronousNetwork lfScNetwork : lfNetwork.getSynchronousNetworks()) {
+//                        ReportNode scReport = Reports.createLfSynchronousNetworkReportNode(networkReport, lfScNetwork.getNumSC());
+                        Reports.reportAngleReferenceBusAndSlackBuses(networkReport, lfScNetwork.getReferenceBus().getId(), lfScNetwork.getSlackBuses().stream().map(LfBus::getId).toList());
+                    }
                     lfNetwork.setReportNode(Reports.includeLfNetworkReportNode(reportNode, lfNetwork.getReportNode()));
                 }
                 case INVALID_NO_GENERATOR_VOLTAGE_CONTROL -> {
@@ -849,14 +891,22 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
         return zeroImpedanceNetworksByModel.get(loadFlowModel);
     }
 
+    public boolean isConnectivityNull() {
+        return connectivity == null;
+    }
+
     public GraphConnectivity<LfBus, LfBranch> getConnectivity() {
         if (connectivity == null) {
             connectivity = Objects.requireNonNull(connectivityFactory.create());
             getBuses().forEach(connectivity::addVertex);
             getBranches().stream()
-                    .filter(b -> b.getBus1() != null && b.getBus2() != null)
-                    .forEach(b -> connectivity.addEdge(b.getBus1(), b.getBus2(), b));
-            connectivity.setMainComponentVertex(getSlackBuses().get(0));
+                .filter(b -> b.getBus1() != null && b.getBus2() != null)
+                .forEach(b -> connectivity.addEdge(b.getBus1(), b.getBus2(), b));
+            // Main component vertex is only meaningful for single-SC networks (security analysis).
+            // For multi-SC (AC-DC) networks, security analysis is not yet supported; leave unset.
+            if (synchronousNetworks.size() == 1) {
+                connectivity.setMainComponentVertex(synchronousNetworks.getFirst().getSlackBuses().getFirst());
+            }
             // this is necessary to create a first temporary changes level in order to allow
             // some outer loop to change permanently the connectivity (with automation systems for instance)
             // this one will never be reverted
@@ -916,19 +966,19 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
                 continue;
             }
             boolean noPvBusesInComponent = componentNoPVBusesMap.computeIfAbsent(getConnectivity().getComponentNumber(notControlledSide),
-                    k -> getConnectivity().getConnectedComponent(notControlledSide).stream()
-                            .noneMatch(bus -> bus.isGeneratorVoltageControlled() && bus.isGeneratorVoltageControlEnabled()));
+                k -> getConnectivity().getConnectedComponent(notControlledSide).stream()
+                    .noneMatch(bus -> bus.isGeneratorVoltageControlled() && bus.isGeneratorVoltageControlEnabled()));
             if (noPvBusesInComponent) {
                 branch.setVoltageControlEnabled(false);
                 LOGGER.trace("Transformer {} voltage control has been disabled because no PV buses on not controlled side connected component",
-                        branch.getId());
+                    branch.getId());
                 disabledTransformerCount++;
             }
         }
         getConnectivity().undoTemporaryChanges();
         if (disabledTransformerCount > 0) {
             LOGGER.warn("{} transformer voltage controls have been disabled because no PV buses on not controlled side connected component",
-                    disabledTransformerCount);
+                disabledTransformerCount);
         }
     }
 
@@ -950,8 +1000,12 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
     }
 
     public String getId() {
-        return "{CC" + numCC + " SC" + numSC + '}';
-    }
+        String numSCs = synchronousNetworks.stream()
+            .map(LfSynchronousNetwork::getNumSC)
+            .map(String::valueOf)
+            .collect(Collectors.joining(", "));
+        return "{CC" + numCC + " SC" + numSCs + '}';
+    } //FIXME
 
     public void addSecondaryVoltageControl(LfSecondaryVoltageControl secondaryVoltageControl) {
         secondaryVoltageControls.add(Objects.requireNonNull(secondaryVoltageControl));
@@ -964,8 +1018,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
     public Optional<LfSecondaryVoltageControl> getSecondaryVoltageControl(String controlZoneName) {
         Objects.requireNonNull(controlZoneName);
         return secondaryVoltageControls.stream()
-                .filter(lfSvc -> lfSvc.getZoneName().equals(controlZoneName))
-                .findFirst();
+            .filter(lfSvc -> lfSvc.getZoneName().equals(controlZoneName))
+            .findFirst();
     }
 
     private static boolean filterSecondaryVoltageControl(LfSecondaryVoltageControl secondaryVoltageControl) {
@@ -974,8 +1028,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
 
     public List<LfSecondaryVoltageControl> getEnabledSecondaryVoltageControls() {
         return secondaryVoltageControls.stream()
-                .filter(LfNetwork::filterSecondaryVoltageControl)
-                .toList();
+            .filter(LfNetwork::filterSecondaryVoltageControl)
+            .toList();
     }
 
     public void addVoltageAngleLimit(LfVoltageAngleLimit limit) {
@@ -989,21 +1043,21 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag, LfEle
     @SuppressWarnings("unchecked")
     public <E extends LfElement> List<E> getControllerElements(VoltageControl.Type type) {
         return busesByIndex.stream()
-                .filter(bus -> bus.isVoltageControlled(type))
-                .filter(bus -> bus.getVoltageControl(type).orElseThrow().getMergeStatus() == VoltageControl.MergeStatus.MAIN)
-                .filter(bus -> bus.getVoltageControl(type).orElseThrow().isVisible())
-                .flatMap(bus -> bus.getVoltageControl(type).orElseThrow().getMergedControllerElements().stream())
-                .filter(Predicate.not(LfElement::isDisabled))
-                .map(element -> (E) element)
-                .toList();
+            .filter(bus -> bus.isVoltageControlled(type))
+            .filter(bus -> bus.getVoltageControl(type).orElseThrow().getMergeStatus() == VoltageControl.MergeStatus.MAIN)
+            .filter(bus -> bus.getVoltageControl(type).orElseThrow().isVisible())
+            .flatMap(bus -> bus.getVoltageControl(type).orElseThrow().getMergedControllerElements().stream())
+            .filter(Predicate.not(LfElement::isDisabled))
+            .map(element -> (E) element)
+            .toList();
     }
 
     public List<LfBus> getControlledBuses(VoltageControl.Type type) {
         return busesByIndex.stream()
-                .filter(bus -> bus.isVoltageControlled(type))
-                .filter(bus -> bus.getVoltageControl(type).orElseThrow().getMergeStatus() == VoltageControl.MergeStatus.MAIN)
-                .filter(bus -> bus.getVoltageControl(type).orElseThrow().isVisible())
-                .toList();
+            .filter(bus -> bus.isVoltageControlled(type))
+            .filter(bus -> bus.getVoltageControl(type).orElseThrow().getMergeStatus() == VoltageControl.MergeStatus.MAIN)
+            .filter(bus -> bus.getVoltageControl(type).orElseThrow().isVisible())
+            .toList();
     }
 
     public void addOverloadManagementSystem(LfOverloadManagementSystem overloadManagementSystem) {
